Added allot of stuff to bot.js

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "bot.js",
   "author": "Geert Soetens",
   "dependencies": {
-    "discord.io": "^2.5.3",
-    "discord.js": "^11.2.1",
+    "discord.io": "github:woor/discord.io#gateway_v6",
     "winston": "^2.4.0"
   }
 }
